--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <div class="col-9">
               <label for="firstName" class="form-label">Solicitações:</label>
               <input type="text" disabled class="form-control"  id="resultado"/>
+              <div id="res">aqui</div>
             </div>
 
             <div class="col-3">
