--- a/app/index.html
+++ b/app/index.html
@@ -165,7 +165,6 @@
 
          <!-- result da camera -->
             <div id="result_strip">
-                <ul class="thumbnails"></ul>
                 <ul class="collector"></ul>
               </div>
               <div id="interactive" class="viewport"></div>
@@ -182,7 +181,7 @@
 
     <script src="vendor/jquery-1.9.0.min.js" type="text/javascript"></script>
     <!-- <script src="//webrtc.github.io/adapter/adapter-latest.js" type="text/javascript"></script> -->
-    <script src="vendor/quagga.js" type="text/javascript"></script>
+    <script src="../vendor/quagga.js" type="text/javascript"></script>
     <script src="live_w_locator.js" type="text/javascript"></script>
 
 
