--- a/old/app/index.html
+++ b/old/app/index.html
@@ -87,7 +87,7 @@
 
       </div>
       <div id="log">
-        <div class="controls" hidden>
+        <div class="controls" >
           <fieldset class="input-group">
             <button class="stop">Stop</button>
           </fieldset>
